# cpp-metrics

./: .clang-format  CMakeLists.txt  README.md
example/: CMakeLists.txt  example.cpp
include/mtr/: metrics.hpp
test/: CMakeLists.txt  block_recording.t.cpp  metric_aggregator.t.cpp
test/lib/googlemock/test/: gmock_test_utils.py
